# huggingface-api-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  generate-image.yml  lint.yml  release-please.yml  test.yml
src/: client.py  image.py  main.py
tests/: test_client.py  test_image.py  test_main.py
