[project]
name = "huggingface-api-demo"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
lint = [
    "pre-commit==4.6.1",
    "pyright==1.1.411",
    "ruff==0.16.0",
]
test = [
    "coverage==7.15.2",
    "pytest==9.1.1",
]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["src"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001",  # unused arguments in functions
    "T201",  # no print statements
]
ignore = [
    "E501",  # line too long (handled by ruff)
]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["T201"]  # print statements are expected in the CLI demo

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 100

[tool.coverage.html]
show_contexts = true
